--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
                 <span class="profession-time">Septermber 2006 - June 2011 <span class="profession-divider">|</span> Ukraine</span>
 
             </div>
+            <div class="english"> 
+                <h3 class="about-me-title">English</h3>
+               
+                <h5 class="education-speciality">Intermediate</h5>
+                
+
+            </div>
         </div>
     </div>
 </body>
