--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                     <li class="tech-skills-item"><span class="tech-skills-text">GIT</span></li>
                     <li class="tech-skills-item"><span class="tech-skills-text">SASS</span></li>
                     <li class="tech-skills-item"><span class="tech-skills-text">JavaScript</span></li>
-                    <li class="tech-skills-item"><span class="tech-skills-text">MySQL</span></li>
+                    <li class="tech-skills-item"><span class="tech-skills-text">REACT</span></li>
+                    <li class="tech-skills-item"><span class="tech-skills-text">TypeScript</span></li>
                     
                 </ul>
             </div>
